# 9cc.cpp

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  docker-compose.yml  test.sh
.circleci/: config.yml
src/: main.cpp
